# fishy_experiments

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
dvd/: DVD_logo.py
in_progress/: aurora_noaa.py  finale.py
ooosina/: pyproject.toml
ooosina/src/ooosina/: hello.py  mesh_terrain.py
oosina/: .gitignore  car_game.py  nomnomnom.py
oosina/models_compressed/: car.bam  car.mtl
water/: README.md  pyproject.toml
water/src/water/: __init__.py  hello.py  starfish.py
